--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <script src="http://use.typekit.com/dgs3yxh.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
   <link href="/css/site.css" rel="stylesheet">
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-38028992-2', 'auto');
+  ga('send', 'pageview');
+  </script>
 </head>
 <body class="font-proxima-nova page-home">
   <header class="header">
