Changed 1/1/1 to Pledge 1%

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
 <div class="features">
   <div class="feature">
-    If you are located in San Francisco, or plan to move up to San Francisco, please register with sf.citi( );. sf.citi is leveraging the collective power of the tech sector as a force for civic action in San Francisco. More information on sf.citi is at:
+    If you are located in San Francisco, or plan to move up to San Francisco, please register with sf.citi( );. sf.citi is leveraging the collective power of the tech sector as a force for civic action in San Francisco.
     <a href="http://www.sfciti.com" target="_blank">www.sfciti.com</a>
   </div>
 
   <div class="feature">
-    We support the 1-1-1 Pledge and encourage you to participate. This is an effort to invite technology entrepreneurs and their companies to commit 1% of their pre-IPO equity to develop philanthropic programs at their companies.
-    <a href="http://www.sharethemodel.org/" target="_blank">www.sharethemodel.org</a>
+    We support Pledge 1% and encourage you to participate. Pledge 1% is an easy way to leverage a portion of your future success to support nonprofits in your community.
+    <a href="http://www.pledge1percent.org/" target="_blank">www.pledge1percent.org</a>
   </div>
 </div>
 
