Modified sf.citi info

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <div class="features">
   <div class="feature">
-    If you are located in San Francisco, or plan to move up to San Francisco, please register with sf.citi( );. sf.citi is leveraging the collective power of the tech sector as a force for civic action in San Francisco.
+    If you are located in San Francisco, or plan to move up to San Francisco, please register with sf.citi. sf.citi is leveraging the collective power of the tech sector as a force for civic action in San Francisco.
     <a href="http://www.sfciti.com" target="_blank">www.sfciti.com</a>
   </div>
 
