Updated founder portal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav>
       <a href="/" class="about-link current">About Us</a>
       <a href="/team" class="team-link ">Team</a>
-      <a href="http://hours.svangel.com/signup/" class="team-link ">Founder Login</a>
+      <a href="http://founders.svangel.com/" class="team-link ">Founder Login</a>
       
     </nav>
   </header>
