updated Abe's bio

--- a/team/index.html
+++ b/team/index.html
@@ -48,7 +48,7 @@
 <p>Robert Pollak is a General Partner of SV Angel. He joined in 2011 and is responsible for all aspects of running the firm. At SV Angel, Robert has originated investments in and works particularly closely with Fundbox, iCracked and Dronebase. He has spoken at international conferences including Techcrunch Europe and OpenAir Berlin. Prior to SV Angel, Robert worked for a multi-family office within Morgan Stanley, that focused on VCs, late-stage technology companies, and entrepreneurs. He also worked at Arnold & Porter LLP on large-scale M&A transactions in their anti-trust group. Robert graduated from the University of Virginia with a B.A. in Economics and Foreign Affairs.</p>
 
 <h2 id="abram-dawson">Abram Dawson</h2>
-<p>Abram Dawson is an Associate at SV Angel. Abram joined SV Angel in 2012 after graduating from Santa Clara University with a B.S. in Economics.</p>
+<p>Abram Dawson is a Principal at SV Angel. Abram joined SV Angel in 2012, and was included in Forbes Magazine's 30 under 30 in 2016. Abram graduated from Santa Clara University with a B.S. in Economics.</p>
 
 <h2 id="mike-liu">Mike Liu</h2>
 <p>Mike Liu is an Associate at SV Angel. Mike joined SV Angel in 2014 from Qatalyst Partners, where he worked on M&amp;A and strategic advisory assignments in the technology sector. Mike graduated from Stanford University with a B.S. in Management Science and Engineering.</p>
