added Peter's bio

--- a/team/index.html
+++ b/team/index.html
@@ -56,6 +56,9 @@
 <h2 id="paul-la-londe">Paul La Londe</h2>
 <p>Paul La Londe is an Associate at SV Angel. Paul joined SV Angel in 2014 from Goldman Sachs’ Private Wealth Management group. At Goldman Sachs he worked closely with high net worth individuals across the venture capital and technology markets. Prior to Goldman Sachs, Paul worked for Seven Hills Partners, a middle-market investment bank. During his time at Seven Hills he advised technology companies on a broad range of strategic alternatives including mergers, acquisitions and private placements. Paul is a graduate of Santa Clara University with a BS in Finance.</p>
 
+<h2 id="peter-tseng">Peter Tseng</h2>
+<p>Peter Tseng is an Associate at SV Angel. Prior to joining SV Angel in 2016, Peter worked as an early employee at DoorDash as both a software engineer and data scientist. Peter studied computer science with a concentration in artificial intelligence at Stanford and graduated in 2014.</p>
+
   </div>
   <footer>
     <address>
