Updated founder portal link on team page

--- a/team/index.html
+++ b/team/index.html
@@ -23,7 +23,7 @@
     <nav>
       <a href="/" class="about-link ">About Us</a>
       <a href="/team" class="team-link current">Team</a>
-      <a href="http://hours.svangel.com/signup/" class="team-link ">Founder Login</a>
+      <a href="http://founders.svangel.com/" class="team-link ">Founder Login</a>
       
     </nav>
   </header>
