--- a/team/index.html
+++ b/team/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <script src="http://use.typekit.com/dgs3yxh.js"></script>
+  <script src="https://use.typekit.com/dgs3yxh.js"></script>
   <script>try{Typekit.load();}catch(e){}</script>
   <link href="/css/site.css" rel="stylesheet">
 </head>
@@ -23,7 +22,7 @@
     <nav>
       <a href="/" class="about-link ">About Us</a>
       <a href="/team" class="team-link current">Team</a>
-      <a href="http://founders.svangel.com/" class="team-link ">Founder Login</a>
+      <a href="https://founders.svangel.com/" class="team-link ">Founder Login</a>
 
     </nav>
   </header>
@@ -63,9 +62,9 @@
   <footer>
     <address>
       <span>588 Sutter Street #299, San Francisco, CA 94102</span>
-	  <span><a href="http://pinterest.com/daslee/sv-angel-portfolio-companies/" target="_blank">Pinterest</a></span>
+	  <span><a href="https://pinterest.com/daslee/sv-angel-portfolio-companies/" target="_blank">Pinterest</a></span>
 	  <span><a href="https://twitter.com/svangel/companies" target="_blank">Twitter</a></span>
-	  <a href="http://www.facebook.com/svangelfirm" target="_blank">Facebook</a>
+	  <a href="https://www.facebook.com/svangelfirm" target="_blank">Facebook</a>
     </address>
   </footer>
   <script type="text/javascript" src="/js/retina.js"></script>
