--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>SV Angel</title>
-  <meta name="description" content="SV Angel is a San Francisco-based angel firm.  We help portfolio companies with business development, financing, M&amp;A and other strategic advice.">
+  <meta name="description" content="SV Angel is a San Francisco-based seed fund. We help portfolio companies with business development, financing, M&amp;A and other strategic advice.">
   <meta name="author" content="SVAngel">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico">
@@ -39,7 +39,7 @@
 
   <div class="content">
     <h1 class="mission-statement">
-  <span class="company-name">SV Angel</span> is a San Francisco-based angel firm. We help portfolio companies with business development, financing, M&amp;A and other strategic advice.
+  <span class="company-name">SV Angel</span> is a San Francisco-based seed fund. We help portfolio companies with business development, financing, M&amp;A and other strategic advice.
 </h1>
 
 <div class="features">
