Removed DL's Pinterest, Twitter to SVA profile

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
   <footer>
     <address>
       <span>588 Sutter Street #299, San Francisco, CA 94102</span>
-	  <span><a href="http://pinterest.com/daslee/sv-angel-portfolio-companies/" target="_blank">Pinterest</a></span>
-	  <span><a href="https://twitter.com/svangel/companies" target="_blank">Twitter</a></span>
+	  <span><a href="https://twitter.com/svangel" target="_blank">Twitter</a></span>
 	  <a href="https://www.facebook.com/svangelfirm" target="_blank">Facebook</a>
     </address>
   </footer>
