Added bios for Beth and Kartik

--- a/team/index.html
+++ b/team/index.html
@@ -49,10 +49,15 @@
 <h2 id="abram-dawson">Abram Dawson</h2>
 <p>Abram Dawson is a Principal at SV Angel. Abram joined SV Angel in 2012, and was included in Forbes Magazine's 30 under 30 in 2016. Abram graduated from Santa Clara University with a B.S. in Economics.</p>
 
-
 <h2 id="peter-tseng">Peter Tseng</h2>
 <p>Peter Tseng is an Associate at SV Angel. Prior to joining SV Angel in 2016, Peter worked as an early employee at DoorDash as both a software engineer and data scientist. Peter studied computer science with a concentration in artificial intelligence at Stanford and graduated in 2014.</p>
 
+<h2 id="beth-turner">Beth Turner</h2>
+<p>Beth Turner is an Associate at SV Angel. Prior to joining, Beth ran operations and invested with a family office focused on seed stage opportunities, investing in companies such as Clover Health, Flatiron Health, LifeLock, and Blue Apron. Prior to this, Beth was managing director of a consulting firm and worked with an international NGO with an operational focus in East Africa. Prior to this, Beth was an early employee at the ad-tech startup Adaptly and worked with one of Israel's first startups, Netafim. She is a Siemens Westinghouse Scholar, has spoken at TEDx and The World Space Conference, the youngest person to ever record an asteroid occultation, and a musician (performing the national anthem for NBA/NFL, with the Houston Grand Opera, and on an album with Albany records). Beth graduated from MIT with a major in Civil and Environmental Engineering and minors in Physics and Earth, Atmospheric and Planetary Sciences (EAPS).</p>
+
+<h2 id="kartik-talwar">Kartik Talwar</h2>
+<p>Kartik Talwar is an Associate at SV Angel. Prior to joining SV Angel in 2016, Kartik studied physics and mathematics at the University of Waterloo.</p>
+	  
   </div>
   <footer>
     <address>
